tests/snapshots/integration__integration_tests__switch__switch_stale_history_to_b.snap
---
source: tests/integration_tests/switch.rs
info:
  program: wt
  args:
    - switch
    - branch-b
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1735776000"
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
✅ [32m[32mSwitched to [1mbranch-b[22m @ [1m[REPO].branch-b[39m[22m[39m
💡 [2mRun [90mwt config shell install[39m to enable automatic cd[22m
